--- a/app/src/main/res/layout/item_currency_row_single.xml
+++ b/app/src/main/res/layout/item_currency_row_single.xml
@@ -16,5 +16,5 @@
     <ImageView
         android:id="@+id/check"
         android:layout_width="20dp" android:layout_height="20dp"
-        android:contentDescription="@string/currencySelected" />
+        android:contentDescription="@string/currency_selected" />
 </LinearLayout>
