--- a/app/src/main/res/layout/dialog_currency_list.xml
+++ b/app/src/main/res/layout/dialog_currency_list.xml
@@ -9,7 +9,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:hint="@string/searchCurrency">
+            android:hint="@string/search_currency">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/searchInput"
