--- a/app/src/main/res/layout/item_currency_row_multi.xml
+++ b/app/src/main/res/layout/item_currency_row_multi.xml
@@ -21,5 +21,5 @@
         android:id="@+id/fav"
         android:layout_width="24dp" android:layout_height="24dp"
         android:layout_marginStart="8dp"
-        android:contentDescription="@string/favoriteToggle" />
+        android:contentDescription="@string/favorite_toggle" />
 </LinearLayout>
