--- a/app/src/main/res/layout/item_section_header.xml
+++ b/app/src/main/res/layout/item_section_header.xml
@@ -12,6 +12,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginEnd="8dp"
+        android:contentDescription="section header"
         app:tint="?attr/colorOnSurface" />
 
     <TextView
