--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
@@ -9,75 +10,98 @@
 
     <!-- Общий ввод -->
 
+
     <Spinner
         android:id="@+id/langSpinner"
-        android:layout_width="111dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="296dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Spinner
-        android:id="@+id/baseCurrencySpinner"
+    <LinearLayout
+        android:id="@+id/currencyLine"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintStart_toEndOf="@id/langSpinner"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/selectCurrenciesButton"
-        android:layout_width="124dp"
-        android:layout_height="67dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/choose_currencies"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/langSpinner">
+
+        <Spinner
+            android:id="@+id/baseCurrencySpinner"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            app:layout_constraintEnd_toStartOf="@+id/selectCurrenciesButton"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/langSpinner"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/selectCurrenciesButton"
+            android:layout_width="169dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="130dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:text="@string/choose_currencies"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.733"
+            app:layout_constraintStart_toEndOf="@+id/baseCurrencySpinner"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/labelPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="84dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="16dp"
         android:text="@string/price_input"
         android:textStyle="bold"
-        android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/selectCurrenciesButton" />
+        app:layout_constraintTop_toBottomOf="@id/currencyLine" />
 
     <!-- Поле Цена -->
     <EditText
         android:id="@+id/priceInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:hint="@string/price_input"
         android:inputType="numberDecimal"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/labelPrice" />
 
     <!-- Количество + единица товара (шт / кг / г / л) -->
+
     <TextView
         android:id="@+id/labelQty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="84dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="16dp"
         android:text="@string/quantity_input"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/priceInput" />
 
+    <!-- Для вес/объём: строка 'цена указана за …' -->
     <LinearLayout
         android:id="@+id/qtyRow"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/labelQty">
+
         <EditText
             android:id="@+id/quantityInput"
             android:layout_width="0dp"
@@ -88,12 +112,11 @@
 
         <Spinner
             android:id="@+id/quantityTypeSpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
             android:layout_marginStart="12dp" />
     </LinearLayout>
 
-    <!-- Для вес/объём: строка 'цена указана за …' -->
     <LinearLayout
         android:id="@+id/priceUnitRow"
         android:layout_width="0dp"
@@ -116,8 +139,8 @@
             android:id="@+id/priceAmountInput"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="12dp"
+            android:layout_weight="1"
             android:hint="@string/count"
             android:inputType="numberDecimal" />
 
@@ -223,5 +246,20 @@
             android:layout_marginTop="5dp"
             android:text="@string/cost_per_l_and_100ml" />
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
