--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="light_black">#383838</color>
     <color name="white">#FFFFFFFF</color>
     <color name="fav_pink">#FB4C8D</color>
+    <color name="fav_orange">#EF740E</color>
 </resources>
