--- a/app/src/main/res/drawable/ic_favorite_border_24.xml
+++ b/app/src/main/res/drawable/ic_favorite_border_24.xml
@@ -5,5 +5,9 @@
     android:viewportHeight="36">
   <path
       android:pathData="M34,18a3,3 0,0 1,-3 3H5a3,3 0,1 1,0 -6h26a3,3 0,0 1,3 3z"
-      android:fillColor="#31373D"/>
+      android:fillColor="#31373D"
+      android:strokeColor="#ffffff"
+      android:strokeWidth="1"
+      android:strokeLineCap="round"
+      />
 </vector>
