--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
-
-    <!-- Верхняя панель -->
-
-    <!-- Общий ввод -->
 
     <LinearLayout
         android:id="@+id/logoLine"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="24dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,269 +36,26 @@
             app:layout_constraintTop_toTopOf="parent" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/currencyLine"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/logoLine">
-
-        <Spinner
-            android:id="@+id/baseCurrencySpinner"
-            android:layout_width="130dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="0dp"
-            app:layout_constraintEnd_toStartOf="@+id/selectCurrenciesButton"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/langSpinner"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/selectCurrenciesButton"
-            android:layout_width="169dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="80dp"
-            android:layout_marginEnd="0dp"
-            android:backgroundTint="@color/fav_orange"
-            android:text="@string/choose_currencies"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.733"
-            app:layout_constraintStart_toEndOf="@+id/baseCurrencySpinner"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/labelPrice"
-        android:layout_width="160dp"
-        android:layout_height="18dp"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/fav_orange"
-        android:textSize="12sp"
-        android:text="@string/price_input"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/currencyLine"
-        />
-
-    <!-- Поле Цена -->
-    <LinearLayout
-        android:id="@+id/priceLine"
-        android:layout_width="fill_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="4dp"
-        android:maxWidth="420dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/labelPrice">
-
-        <EditText
-            android:id="@+id/priceInput"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="4dp"
-            android:layout_weight="1"
-            android:hint="@string/price_input"
-            android:inputType="numberDecimal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/labelPrice" />
-    </LinearLayout>
-
-    <!-- Количество + единица товара (шт / кг / г / л) -->
-
-    <TextView
-        android:id="@+id/labelQty"
-        android:layout_width="160dp"
-        android:layout_height="18dp"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/fav_orange"
-        android:textSize="13sp"
-        android:text="@string/quantity_input"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/priceLine" />
-
-    <!-- Для вес/объём: строка 'цена указана за …' -->
-    <LinearLayout
-        android:id="@+id/qtyRow"
+    <!-- Верхняя панель -->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:maxWidth="420dp"
-        android:layout_marginTop="4dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/labelQty">
-        <EditText
-            android:id="@+id/quantityInput"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:hint="@string/quantity_input"
-            android:inputType="numberDecimal" />
-
-        <Spinner
-            android:id="@+id/quantityTypeSpinner"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="0dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/priceUnitRow"
-        android:layout_width="0dp"
+        android:layout_marginTop="30dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:orientation="horizontal"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/qtyRow">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tabTextColor="@color/fav_orange"
+        app:tabIndicatorColor="@color/fav_orange"
+        app:layout_constraintTop_toBottomOf="@id/logoLine"/>
 
-        <TextView
-            android:id="@+id/labelPriceUnit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/price_for_label" />
-
-        <!-- сколько этих единиц соответствует цене -->
-        <EditText
-            android:id="@+id/priceAmountInput"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_weight="1"
-            android:hint="@string/count"
-            android:inputType="numberDecimal" />
-
-        <Spinner
-            android:id="@+id/priceUnitSpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp" />
-    </LinearLayout>
-
-    <!-- ===== РЕЖИМ: ШТУЧНО ===== -->
-    <LinearLayout
-        android:id="@+id/modePiece"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="vertical"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
+        app:tabTextColor="@color/fav_orange"
+        app:layout_constraintTop_toBottomOf="@id/tabLayout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/priceUnitRow">
-
-        <TextView
-            android:id="@+id/piecePriceLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/piece_price" />
-
-        <TextView
-            android:id="@+id/pieceCountLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="@string/piece_count" />
-
-        <TextView
-            android:id="@+id/pieceConvertedPerItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/converted_per_piece_title" />
-
-        <TextView
-            android:id="@+id/pieceConvertedTotal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="@string/converted_total_title" />
-    </LinearLayout>
-
-    <!-- ===== РЕЖИМ: ВЕС/ОБЪЁМ ===== -->
-    <LinearLayout
-        android:id="@+id/modeWeight"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/priceUnitRow">
-
-        <TextView
-            android:id="@+id/pricePerUnitLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="@string/price_for" />
-
-        <TextView
-            android:id="@+id/takenAmountLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="@string/price_for" />
-
-        <TextView
-            android:id="@+id/costPerBaseUnitLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="@string/price_per_any_format" />
-
-        <TextView
-            android:id="@+id/convertedPerUnitLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="@string/taken_generic" />
-
-        <TextView
-            android:id="@+id/convertedPerBaseUnitLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="@string/cost_per_kg_and_100g" />
-
-        <TextView
-            android:id="@+id/convertedTotalLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="@string/cost_per_l_and_100ml" />
-    </LinearLayout>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
