--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="unitsSell">
-        <item>шт.</item>
-        <item>кг</item>
-        <item>г</item>
-        <item>л</item>
-        <item>мл</item>
+        <item>@string/unit_piece</item>
+        <item>@string/unit_kg</item>
+        <item>@string/unit_g</item>
+        <item>@string/unit_l</item>
+        <item>@string/unit_ml</item>
     </string-array>
 
     <string-array name="unitsPriceVolume">
-        <item>мл</item>
-        <item>л</item>
+        <item>@string/unit_ml</item>
+        <item>@string/unit_l</item>
     </string-array>
 
     <string-array name="unitsPriceWeight">
-        <item>г</item>
-        <item>кг</item>
+        <item>@string/unit_g</item>
+        <item>@string/unit_kg</item>
+    </string-array>
+
+    <string-array name="units_compare">
+        <item>@string/unit_g</item>
+        <item>@string/unit_kg</item>
+        <item>@string/unit_ml</item>
+        <item>@string/unit_l</item>
     </string-array>
 </resources>
