--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,11 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="grey">#ADA7A7</color>
+    <color name="grey_dark">#454444</color>
     <color name="light_black">#6A463A</color>
     <color name="white">#FFFFFFFF</color>
     <color name="fav_pink">#FB4C8D</color>
     <color name="fav_orange">#EF740E</color>
+    <color name="fav_orange_light">#EFB88C</color>
 </resources>
